# NuMIana

./: .gitignore  Ana.cc  CMakeLists.txt  DAnaLibs.cc  DAnaLibs.hh  LArAna.cc  LArAna.hh  NuMIana.C  NuMIana.cc  NuMIana.h  NuMIana.hh  NuMIana_doxygen.cfg  README  WindowAna.cc  WindowAna.hh  f2010test.txt  file_list.txt  file_list_2013.txt  simpleAna.hh  tester.py
anas/: CMakeLists.txt  DEhist.cpp  DEnue.cpp  FullDEhist.cpp  FullDEnue.cpp  Makefile  completeNtuple.cpp  ex.cpp  fluggex.cpp  gsimpex.cpp  larex.cpp  lartreeana.cpp  lna.cpp  looks.h  looks.hh  numiEvRate.cpp  ppmediumAna.cpp  simple2.cpp  simpleex.cpp  simples_flux.cpp  windowex.cpp
comparing/: comp.py
config/: a.out  test.cpp
file_lists/: file_list_2010.txt  locallist2010.txt  locallist2013.txt  numbers_2013.txt  numbers_2013_cut.txt
src/: Ana.cc  Ana.hh  DistEnergy.cc  DistEnergy.hh  EvRate.cc  EvRate.hh  FullDistEnergy.cc  FullDistEnergy.hh  LArAna.cc  LArAna.hh  LArTree.cc  LArTree.hh  LNA.cc  LNA.hh  Utils.cc  Utils.hh  looks.hh  simpleAna.cc  simpleAna.hh  simpleAna2.cc  simpleAna2.hh
